# saga-pattern

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
services/dashboard/: Dockerfile  pyproject.toml
services/dashboard/src/dashboard/: __init__.py  main.py
services/inventory-service/: Dockerfile  pyproject.toml
services/inventory-service/src/inventory_service/: handlers.py  main.py  models.py  outbox.py  routes.py
services/order-service/: Dockerfile  pyproject.toml
services/order-service/src/order_service/: handlers.py  main.py  models.py  routes.py  schemas.py
services/payment-service/: Dockerfile  pyproject.toml
services/payment-service/src/payment_service/: handlers.py  main.py  models.py  paypal_client.py  settings.py
