[project]
name = "saga-pattern"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = []

[tool.uv.workspace]
members = [
  "packages/*",
  "services/*",
]

[tool.uv.sources]
events = { workspace = true }
db = { workspace = true }
broker = { workspace = true }

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "redis>=5.0",
  "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py314"
