[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "imrahulmane", email = "manerahul8298@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "redis>=8.0.0",
    "sse-starlette>=3.4.4",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
